<resources>
    <string name="api_key">D71A0AC3-1AD3-42BE-87C1-833457D63B4D9</string>
    <string name="app_name">Walking SchoolBus</string>
    <string name="main_menu">Main Menu</string>


    <string name="title_activity_maps">Map</string>


    <!--Welcome Screen-->
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login_email">E-mail</string>
    <string name="login_username">Name</string>
    <string name="login_password">Password</string>
    <string name="login_signup_text">Don\'t have an account? Sign up</string>
    <string name="login_success">LOGIN SUCCESS</string>


    <!--Main Menu-->
    <string name="menu_my_kids">My Kids</string>
    <string name="menu_monitor">Monitor</string>
    <string name="menu_my_parents">My Parents</string>
    <string name="menu_group">Groups</string>
    <string name="menu_map">Map</string>
    <string name="menu_game">Game</string>
    <string name="emergency">EMERGENCY</string>
    <string name="communicate">Communicate</string>
    <string name="menu_message">Messages</string>
    <string name="log_out">LOG OUT</string>
    <string name="hello">Hello,</string>
    <string name="mm_walkingwith">Walking With: </string>
    <string name="mm_not_walking">No Group Selected</string>
    <string name="menu_broadcasts">Broadcasts</string>
    <string name="menu_leader_board">Leader Board</string>
    <string name="permissions">My Permissions</string>

    <!--Sign up-->
    <string name="name">Full Name: </string>
    <string name="password">Password: </string>
    <string name="re_enter_pass">Re-enter Password: </string>
    <string name="email">Email Address: </string>
    <string name="create_user">CREATE USER</string>

    <!--Group Management-->
    <string name="group_layout_title">MY GROUPS</string>
    <string name="create_group_btn">CREATE GROUP</string>
    <string name="join_group_btn">JOIN GROUP</string>
    <string name="modify_group">MODIFY/REMOVE</string>
    <string name="leader_group">A leader of</string>
    <string name="member_group">A member of</string>
    <string name="delete_message">Delete successfully!</string>

    <string name="group_help_txt">Swipe left on group name for options.</string>


    <!-- Place Picker -->
    <string name="location">SELECT LOCATION</string>
    <string name="meet_up_location">SELECT MEET-UP SPOT</string>
    <string name="group_name_edit">GROUP NAME</string>
    <string name="create_group">CREATE GROUP</string>

    <!-- Leader && Member -->
    <string name="members">MEMBERS</string>
    <string name="leader_help_txt">Swipe left on member name for options.</string>
    <string name="walking_with_btn">Walk with this group</string>
    <string name="group_descript_leader">Group: </string>
    <string name="leader">A LEADER</string>
    <string name="member_help_txt">Swipe left on leader name for options.</string>

    <!--Settings-->
    <string name="monitoring">List All Users I Monitor</string>
    <string name="monitored_by">List All Users Who Monitor Me</string>
    <string name="monitor_email_help">Add Email or User to Monitor/Be Monitored By</string>
    <string name="add_monitoring">Start Monitoring The Email Above</string>
    <string name="add_monitored_by">Starting Being Monitored By The Email Above</string>
    <string name="monitored_title">MY PARENTS:</string>
    <string name="monitoring_title">I MONITOR:</string>
    <string name="monitor_help_txt">Swipe left on user name for options.</string>

    <!-- Dialog Fragment -->
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="group_name">Group name is: </string>
    <string name="group_leader">Group leader is: </string>

    <!-- On Marker Click -->

    <string name="prompt_join">Would you like to join this group? </string>
    <string name="prompt_leader">You are the leader of this group!</string>


    <!--Leader Activity-->
    <string name="member_is">Member : </string>
    <string name="gps_message">Now your GPS is updating!</string>

    <!---On Listview -->
    <string name="message_swipe">Message</string>
    <string name="delete_swipe">Delete</string>
    <string name="leave_swipe">Leave</string>
    <string name="open_swipe">Open</string>
    <string name="add_to_group_swipe">Add to group</string>
    <string name="gorup_swipe">Groups</string>
    <string name="group_list">Group: </string>
    <string name="user_name_list">Name:</string>
    <string name="user_email_list">Email:</string>

    <!--userSettings-->
    <string name="notify_user_added">User added successfully</string>

    <!--removeMonitoringActivity-->
    <string name="notify_add_to_group">User has been added to group.</string>

    <!--MyParentsActivity-->
    <string name="notify_delete"> You will not be monitored by this user anymore.</string>
    <string name="add_new_parents">Add a new parent</string>
    <string name="add_button">Add </string>
    <string name="edittext_parents_email"> A parent\'s email </string>

    <!--MonitoringListActivity-->
    <string name="notify_not_monitor">You cannot monitor this user anymore.</string>
    <string name="monitoring_user_email">User Email: </string>
    <string name="monitoring_user_name">User Name: </string>


    <!--MyKidsActivity-->
    <string name="map">Map</string>
    <string name="add_new">Add New Kid</string>
    <string name="my_kids_txt">My Kids:</string>
    <string name="mykids_user_email">User Email: </string>
    <string name="mykids_user_name">User Name: </string>
    <string name="mykids_remove_swipe">Remove</string>
    <string name="mykids_open_swipe">Open</string>
    <string name="mykids_notify_not_kid">You are not monitoring this kid anymore.</string>

    <!--OpenKidActivity-->
    <string name="update_kid">Update</string>
    <string name="add_to_group">Add To Group</string>
    <string name="open_kid_group_name">Group Name: </string>
    <string name="open_kid_group_id">Group Id: </string>
    <string name="open_kid_group_description">Group Description: </string>
    <string name="open_kid_title_part1">My kid </string>
    <string name="open_kid_title_part2">is a member of the groups: </string>
    <string name="map_open_kid">Map</string>
    <string name="open_kid_removed_part_1">Your kid, </string>
    <string name="open_kid_removed_part_2">, has been removed from the group.</string>

    <!--AddNewKidActivity-->
    <string name="kids_email">Email: </string>
    <string name="new_kid_title">Enter New Kid Information</string>
    <string name="confirm_btn_text">Confirm</string>
    <string name="parent_now_monitors_kid">, you are now monitoring </string>

    <string name="add_new_kids">Add a new kid</string>

    <!--AddKidToGroupActivity-->
    <string name="opening_message">Choose a group to join by tapping a marker.</string>

    <!--edit/view User Settings -->
    <string name="user_name">Name: </string>
    <string name="user_DOB">Date Of Birth: </string>
    <string name="user_address">Address: </string>
    <string name="user_hphone">Home Phone: </string>
    <string name="user_cphone">Cell Phone: </string>
    <string name="user_email">Email: </string>
    <string name="user_emerg_contact">Emergency Contact: </string>
    <string name="user_teacher_grade">Teacher and Grade: </string>
    <string name="user_view_settings_title">Account Information</string>
    <string name="user_view_settings_subtitle">Click Below to Update Information</string>
    <string name="user_view_ICE">Emergency Contact Information: </string>
    <string name="user_btn_update">UPDATE</string>
    <string name="user_save">SAVE</string>
    <string name="user_edit_subtitle">Update Information Then Press Save</string>
    <string name="user_edit_title">Update Account Information</string>
    <string name="user_hint_year">-yyyy-</string>
    <string name="user_hint_student">fill only if student</string>
    <string name="user_logout_message">Please Log In Using Your New Email</string>
    <string name="user_view_monitors">VIEW PARENTS AND MONITORS</string>

    <string-array name="months_array">
        <item></item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <!--OnMarkerClickKidActivity-->
    <string name="group_id_kid">Group ID: </string>

    <!--OpenKidGroupActivity-->
    <string name="details">DETAILS</string>
    <string name="kid_group_members">Members: </string>

    <!--ViewUserMonitoredByActivity-->
    <string name="monitored_by_view">Monitored By: </string>
    <string name="view_parent_info">View</string>

    <!--Emergency/Broadcast messages-->
    <string name="loading">Loading....</string>
    <string name="emergency_prefix">|EMERGENCY|</string>
    <string name="emergency_instruction">This will send an emergency message to your parents and
    group leaders</string>
    <string name="non_emergency_instructions">This will send a message to your parents and group leaders</string>
    <string name="broadcast_instructions">This will send a message to your group members</string>
    <string name="message_sent">Message sent.</string>
    <string name="send">SEND</string>
    <string name="type_message">Type message here</string>

    <!-- send message-->
    <string name="send_emergency_message">sendEmergency</string>
    <string name="send_regular_message">SendNormal</string>

    <!--leader board-->
    <string name="user_point_total">points</string>
    <string name="colon">: </string>
    <string name="leader_board_title">Leader Board</string>
    <string name="st">st.\u0020</string>
    <string name="nd">nd.\u0020</string>
    <string name="rd">rd.\u0020</string>
    <string name="th">th.\u0020</string>
    <!--Game-->
    <string name="get_rewards_btn">Get Rewards</string>
    <string name="session_user_points">My Points:\u0020</string>
    <string name="current_price">Price:\u0020</string>
    <string name="current_num_rewards">I\'ve got rid of\u0020</string>
    <string name="stickers">\u0020post-it stickers.</string>
    <string name="toast_not_enough">Not enough points to remove stickers!</string>


    <!-- Generic Permission-->
    <string name="request_sent">Request Sent To:\u0020</string>
    <string name="group_pending"></string>
    <string name="removal_pending">Removal Pending Approval</string>
    <string name="base_title">Outstanding Permissions</string>
    <string name="permission_viewall_subtitle">Swipe Right for details</string>
    <string name="permission_title_view_all">All Previous Permissions</string>
    <string name="permission_view_all">View All</string>
</resources>
