<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSettingActivity"
    android:orientation="vertical">


    <Button
        android:id="@+id/btnMonitoringList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/monitoring"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnMonitoredList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/monitored_by"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/monitor_email_help"
        android:inputType="textPersonName"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnAddToMonitoringList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add_monitoring"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnAddMonitoredList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add_monitored_by"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>


</LinearLayout>