<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlacePickerActivity">

    <Button
        android:id="@+id/btnPrimaryLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location" />

    <TextView
        android:id="@+id/txtViewPrimaryLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btnMeetingLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/meet_up_location" />

    <TextView
        android:id="@+id/txtViewMeetupLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/editTxtGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/group_name_edit"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnCreateGroup"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="170dp"
        android:text="@string/create_group" />

</LinearLayout>