<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditUserSettingsActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/txtViewUserEditTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/txtViewUserEditSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="TextView"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="35dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="368dp"
        android:layout_height="390dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtViewedituserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_name" />

            <EditText
                android:id="@+id/EditTxtInputName"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtView_UserDOB"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:text="@string/user_DOB" />

            <Spinner
                android:id="@+id/SpinnerEditUserMOB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>

            <EditText
                android:id="@+id/txtViewUserThisYOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TxtViewHPhone"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:text="@string/user_hphone" />

            <TextView
                android:id="@+id/txtViewUserThisHPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtViewCPhone"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:text="@string/user_cphone" />

            <TextView
                android:id="@+id/txtViewUserThisCPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtViewUserEmail"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:text="@string/user_email" />

            <TextView
                android:id="@+id/txtViewUserThisEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtViewUserAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_address" />

        <TextView
            android:id="@+id/txtViewUserThisAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtViewGrade"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:text="@string/user_teacher_grade" />

            <TextView
                android:id="@+id/txtViewUserThisGrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtViewICE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_view_ICE" />

        <TextView
            android:id="@+id/txtViewUserThisICE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="textView" />
    </LinearLayout>

    <Button
        android:id="@+id/btnViewUserUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Button"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="458dp" />


</android.support.constraint.ConstraintLayout>