<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyKidsActivity">

    <TextView
        android:id="@+id/txtParentsHelp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/myKidsList"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/monitor_help_txt" />

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/myKidsList"
        android:layout_width="340dp"
        android:layout_height="326dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/addNewBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </com.baoyz.swipemenulistview.SwipeMenuListView>

    <Button
        android:id="@+id/addNewBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="141dp"
        android:text="@string/add_new_kids"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/myKidsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/my_kids_txt"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>